style.css
/* ... */
.upper__container__navbar__right__item__login {
    border: var(--login-border);
    font-size: var(--login-font-size);
    font-weight: var(--login-font-weight);
    border-radius: var(--login-border-radius);
    padding: var(--login-padding);
    background-color: transparent;
    color: var(--primary-color);
    letter-spacing: var(--login-letter-spacing);
}

.upper__container__navbar__right__item__home,
.upper__container__navbar__right__item__explore,
.upper__container__navbar__right__item__contact {
    font-size: 24px;
    font-weight: 400;
    letter-spacing: 0.96px;
}

/* Upper Contiainer top section style done */



/* upper container middle section style */
.upper__container__middle {
    display: flex;
    flex-direction: column;
    max-width: 800px;
    margin-bottom: 100px;
}

.upper__container__middle__title {
    font-size: 85px;
    font-style: normal;
    font-weight: 700;
    line-height: 100px;
    letter-spacing: 4.25px;
}

.upper__container__middle__title span {
    color: var(--primary-color);
}


.upper__container__middle__content {
    font-size: var(--content-font-size);
    font-style: normal;
    font-weight: 250;
    line-height: 40px;
    letter-spacing: 0.64px;
    padding-bottom: 58px;
}

.upper__container__middle__btn {
    display: flex;
    gap: 27px;
    padding-bottom: 44px;
    padding-left: 38px;
}

.upper__container__middle__btn__shopnow {
    font-size: 24px;
    font-weight: 700;
    line-height: 30px;
    color: #FFFFFF;
    background-color: var(--primary-color);
    padding: 18px 54px 17px 53px;
    box-shadow: 0px 0px 21px 0px var(--primary-color);
    border-radius: 30px;
    border: none;
}

.upper__container__middle__btn__addtocart {
    padding: 17px 24px 17px 23px;
    border: 3px solid var(--primary-color);
    border-radius: 30px;
    font-size: 24px;
    font-weight: 700;
    line-height: 30px;
    color: var(--primary-color);
    display: flex;
    align-items: center;
    justify-content: center;
}

.upper__container__middle__btn__addtocart img {
    padding-right: 10px;
}





/* upper container bottom styling */
.upper__container__bottom {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.upper__container__bottom__right {
    display: flex;
    gap: 25px;
    margin-right: 200px;
}

.upper__container__bottom__left img {
    position: relative;
    left: 400px;
}

.upper__container__bottom__right__item {
    position: relative;
    width: 350px;
    top: -13px;
    height: 180px;
    border-radius: 25px;
    border: 1px solid #FFFFFFB2;
    background: linear-gradient(116.15deg, rgba(192, 192, 192, 0.63) -10.88%, rgba(255, 255, 255, 0.49) -10.87%, rgba(255, 255, 255, 0.07) 74.79%);
    left: 191px;
}

.upper__container__bottom__right__item img {
    position: absolute;
    top: 8%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.upper__container__bottom__right__item__info {
    position: absolute;
    top: 55%;
    left: 8%;
}

.upper__container__bottom__right__item__info__name {
    font-size: 24px;
    font-style: normal;
    font-weight: 400;
    line-height: 40px;
    letter-spacing: 0.48px;
}


.new__price {
    color: #FC9918;
    font-size: 23px;
    font-style: normal;
    font-weight: 400;
    line-height: 40px;
    letter-spacing: 0.46px;
    padding-right: 17px;
}

.old__price {
    color: #000;
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: 40px;
    letter-spacing: 0.36px;
    text-decoration-line: strikethrough;
}


/* Popular trends */
.popular__trend__container,
.arrival__container {
    overflow: hidden;
    width: 100%;
    margin-bottom: 100px;
    padding-left: 126px;
}

.popular__card {
    border: 1px solid #FFF;
    background: linear-gradient(180deg, rgba(255, 255, 255, 0.70) 0%, rgba(255, 255, 255, 0.10) 100%);
}


.arrival__card {
    border: 5px solid #35589A;
    background: #370665;
}

.arrival__card p, .arrival__card ul li{
    color: white;
}

.popular__trend__container__items {
    display: flex;
    gap: 40px;
    overflow: hidden;
    justify-content: start;
}

.popular__trend__container__title {
    text-align: center;
    font-size: var(--heading-font-size);
    font-style: normal;
    font-weight: 700;
    line-height: 50px;
    letter-spacing: 1.28px;
    padding-bottom: 103px;
}

.popular__trend__container__item__top {
    height: 331px;
    width: 376px;
}

.popular__trend__container__item__top img {
    width: 100%;
    overflow: hidden;
    object-fit: cover;
    object-position: 50% 50%;
}

/* Card style */
.card {
    min-width: var(--popular-card-width);
    height: var(--popular-card-height);
    box-shadow: var(--popular-card-box-shadow);
    border-radius: var(--card-border-radius);
    padding-bottom: var(--popular-card-heading-padding-bottom);
    line-height: var(--card-line-height);
    overflow: hidden;
}

.card__top {
    height: 345px;
    width: 375px;
}


.card__top img {
    width: 100%;
    overflow: hidden;
    object-fit: cover;
    height: 100%;
}

.card__bottom {
    padding-left: 22px;
}

.card__bottom p {
    font-size: 26px;
    line-height: 36px;
    letter-spacing: 0.52px;
}

.card__bottom__btns {
    display: flex;
    gap: 2px;
    align-items: center;
    justify-content: space-evenly;
}

.card__price {
    color: var(--price-color);
    font-size: var(--price-font-size);
    padding-top: var(--price-padding-top);
    padding-bottom: var(--price-padding-bottom);
    font-style: normal;
    font-weight: 400;
    line-height: var(--price-line-height);
    letter-spacing: var(--price-letter-spacing);
}
/* ... */

